# mdtable

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: PROJECT_BRIEF.md
src/mdtable/: __init__.py
tests/: test_align.py  test_basic.py
